chore(handler): add docs to image handlers
